--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "moment": "^2.24.0",
     "next": "^11.0.0",
+    "nextjs-google-analytics": "^2.2.2",
     "qs": "^6.10.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
